[package]
name = "sqlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
pest ={ version = "2.7.3", features = ["pretty-print"]}
serde_json = "1.0.105"
sqlparser = { version = "0.37.0", features = ["visitor", "json_example"] }
